spec: Create first draft of Publication functionality
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -58,6 +58,20 @@
   url = {https://tools.ietf.org/html/rfc5280},
   note = {\url{https://tools.ietf.org/html/rfc5280}},
 }
+@techreport{RFC5652,
+  author = {R. Housley},
+  title = {Cryptographic Message Syntax {(CMS)}},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {5652},
+  year = {2009},
+  month = {September},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {IETF},
+  url = {https://tools.ietf.org/html/rfc5652},
+  note = {\url{https://tools.ietf.org/html/rfc5652}},
+}
 @techreport{X.680,
   author = {{International Telecommunication Union}},
   title = {Information Technology --- {Abstract} {Syntax} {Notation} {One} {(ASN.1)}: Specification of basic notation},
